--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -1,7 +1,6 @@
 {
   "name": "client",
   "private": true,
-  "version": "2.3.1",
   "type": "module",
   "scripts": {
     "build": "react-router build",
@@ -20,6 +19,7 @@
     "@react-router/node": "^7.5.0",
     "@react-router/serve": "^7.5.0",
     "@tauri-apps/api": "^2.5.0",
+    "@tauri-apps/plugin-cli": "^2.2.0",
     "@tauri-apps/plugin-dialog": "^2.2.1",
     "@tauri-apps/plugin-opener": "^2.2.6",
     "@tauri-apps/plugin-process": "^2.2.1",
