--- a/packages/tauri-app/package.json
+++ b/packages/tauri-app/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@tauri-apps/api": "^2.5.0",
+    "@tauri-apps/plugin-cli": "~2.2.0",
     "@tauri-apps/plugin-deep-link": "~2.2.1",
     "@tauri-apps/plugin-opener": "~2.2.6",
     "@tauri-apps/plugin-updater": "~2.7.1"
