--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -31,6 +31,7 @@
     "dedent": "^1.5.3",
     "dotenv": "^16.3.1",
     "formik": "^2.4.2",
+    "idb": "^8.0.3",
     "immer": "^10.1.1",
     "isbot": "^5.1.17",
     "lodash-es": "^4.17.21",
