--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -11,7 +11,8 @@
     "typecheck": "react-router typegen && tsc"
   },
   "dependencies": {
-    "@chakra-ui/react": "^3.16.0",
+    "@chakra-ui/charts": "^3.17.0",
+    "@chakra-ui/react": "^3.19.0",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^8.0.0",
     "@dnd-kit/utilities": "^3.2.2",
@@ -31,6 +32,7 @@
     "dedent": "^1.5.3",
     "dotenv": "^16.3.1",
     "formik": "^2.4.2",
+    "howler": "^2.2.4",
     "idb": "^8.0.3",
     "immer": "^10.1.1",
     "isbot": "^5.1.17",
@@ -53,14 +55,16 @@
     "react-icons": "^5.5.0",
     "react-router": "^7.5.0",
     "react-spinners": "^0.16.1",
+    "recharts": "^2.15.3",
     "uuid": "^9.0.0",
     "zod": "^3.21.4"
   },
   "devDependencies": {
-    "@chakra-ui/cli": "^3.16.0",
+    "@chakra-ui/cli": "^3.19.0",
     "@react-router/dev": "^7.5.0",
     "@tailwindcss/vite": "^4.0.0",
     "@types/canvas-confetti": "^1.6.0",
+    "@types/howler": "^2.2.12",
     "@types/lodash-es": "^4.17.12",
     "@types/node": "^20",
     "@types/react": "^19.0.1",
