--- a/packages/tauri-app/src-tauri/Cargo.toml
+++ b/packages/tauri-app/src-tauri/Cargo.toml
@@ -21,7 +21,7 @@ tauri-build = { version = "2.2.0", features = [] }
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 log = "0.4"
-tauri = { version = "2.5.0", features = ["devtools"] }
+tauri = { version = "2.5.0", features = [ "protocol-asset", "devtools"] }
 tauri-plugin-log = "2.0.0-rc"
 tauri-plugin-opener = "2"
 tauri-plugin-deep-link = "2"
