--- a/.github/workflows/tauri-android.yml
+++ b/.github/workflows/tauri-android.yml
@@ -24,9 +24,9 @@ jobs:
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
-          java-version: '17'
-          distribution: 'temurin'
-      
+          java-version: "17"
+          distribution: "temurin"
+
       - name: Setup Android SDK
         uses: android-actions/setup-android@v3
 
@@ -41,7 +41,7 @@ jobs:
       - name: Install Rust stable and Android targets
         uses: dtolnay/rust-toolchain@stable
         with:
-          targets: aarch64-linux-android,armv7-linux-androideabi,i686-linux-android,x86_64-linux-android
+          targets: aarch64-linux-android,armv7-linux-androideabi
           components: rust-src
 
       - name: Cache Rust
@@ -53,18 +53,26 @@ jobs:
       - name: Build API types package
         run: pnpm build:api
 
+      - name: Setup Android signing
+        run: |
+          cd packages/tauri-app/src-tauri/gen/android
+          echo "keyAlias=${{ secrets.ANDROID_KEY_ALIAS }}" > keystore.properties
+          echo "password=${{ secrets.ANDROID_KEY_PASSWORD }}" >> keystore.properties
+          base64 -d <<< "${{ secrets.ANDROID_KEY_BASE64 }}" > $RUNNER_TEMP/keystore.jks
+          echo "storeFile=$RUNNER_TEMP/keystore.jks" >> keystore.properties
+
       - name: Build Tauri Android app
         env:
           ANDROID_HOME: ${{ env.ANDROID_SDK_ROOT }}
           ANDROID_NDK_HOME: ${{ steps.setup-ndk.outputs.ndk-path }}
           NDK_HOME: ${{ steps.setup-ndk.outputs.ndk-path }}
-        run: pnpm --filter tauri-app tauri android build
+        run: pnpm --filter tauri-app tauri android build --target aarch64 --target armv7
 
       - name: Upload Android artifact
         uses: actions/upload-artifact@v4
         with:
           name: tauri-app-android
-          path: packages/tauri-app/src-tauri/gen/android/app/build/outputs/apk/universal/release/app-universal-release-unsigned.apk
+          path: packages/tauri-app/src-tauri/gen/android/app/build/outputs/apk/universal/release/app-universal-release.apk
 
   # ─────────────────────────────── Release job ──────────────────────────
   release:
