--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -40,7 +40,9 @@
     "cookie-parser": "^1.4.7",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "fast-xml-parser": "^5.2.3",
     "googleapis": "^148.0.0",
+    "jszip": "^3.10.1",
     "meilisearch": "^0.50.0",
     "muvel-api-types": "workspace:^",
     "passport": "^0.7.0",
