--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -20,6 +20,7 @@
     "@react-router/node": "^7.5.0",
     "@react-router/serve": "^7.5.0",
     "@tauri-apps/api": "^2.5.0",
+    "@tauri-apps/plugin-cli": "~2.2.0",
     "@tauri-apps/plugin-dialog": "^2.2.1",
     "@tauri-apps/plugin-opener": "^2.2.6",
     "@tauri-apps/plugin-process": "^2.2.1",
@@ -34,10 +35,10 @@
     "howler": "^2.2.4",
     "idb": "^8.0.3",
     "immer": "^10.1.1",
+    "isbot": "^5",
     "lodash-es": "^4.17.21",
     "motion": "^12.7.4",
     "muvel-api-types": "workspace:^",
-    "muvel-io": "workspace:^",
     "next-themes": "^0.4.6",
     "prosemirror-commands": "^1.7.1",
     "prosemirror-history": "^1.4.1",
