--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -54,6 +54,7 @@
     "react-icons": "^5.5.0",
     "react-router": "^7.5.0",
     "recharts": "^2.15.3",
+    "use-debounce": "^10.0.4",
     "uuid": "^9.0.0",
     "zod": "^3.21.4"
   },
