--- a/packages/tauri-app/src-tauri/Cargo.toml
+++ b/packages/tauri-app/src-tauri/Cargo.toml
@@ -32,6 +32,7 @@ chrono = "0.4.41"
 tauri-plugin-dialog = "2.2.1"
 serde_repr = "0.1.20"
 slug = "0.1.6"
+tauri-plugin-fs = "2"
 
 [target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
 font-kit = "0.11"
