--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -37,6 +37,7 @@
     "idb": "^8.0.3",
     "immer": "^10.1.1",
     "isbot": "^5",
+    "jszip": "^3.10.1",
     "lodash-es": "^4.17.21",
     "motion": "^12.7.4",
     "muvel-api-types": "workspace:^",
